--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-to-excalidraw",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Convert SVG to Excalidraw’s file format",
   "main": "dist/bundle.js",
   "files": [
@@ -30,38 +30,39 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.14.7",
+    "@babel/core": "7.24.5",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.20.7",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.15.4",
-    "@babel/preset-typescript": "7.15.0",
-    "@excalidraw/eslint-config": "1.0.1",
+    "@babel/preset-env": "7.24.5",
+    "@babel/preset-typescript": "7.24.1",
+    "@excalidraw/eslint-config": "1.0.3",
     "@excalidraw/prettier-config": "1.0.2",
-    "@types/chroma-js": "^2.1.3",
-    "@typescript-eslint/eslint-plugin": "4.31.0",
-    "@typescript-eslint/parser": "4.31.0",
-    "babel-loader": "^8.2.2",
+    "@types/chroma-js": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "babel-loader": "^8.3.0",
     "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "lint-staged": "11.1.2",
-    "prettier": "2.3.2",
-    "typescript": "4.4.2",
-    "webpack": "5.52.0",
-    "webpack-cli": "4.8.0"
+    "eslint-config-prettier": "8.10.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "lint-staged": "11.2.6",
+    "prettier": "2.8.8",
+    "typescript": "4.9.5",
+    "webpack": "5.91.0",
+    "webpack-cli": "4.10.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
-    "chroma-js": "^2.1.2",
-    "gl-matrix": "^3.3.0",
-    "nanoid": "^3.1.25",
+    "chroma-js": "^2.4.2",
+    "gl-matrix": "^3.4.3",
+    "nanoid": "^3.3.7",
     "path-data-parser": "^0.1.0",
     "points-on-curve": "^0.2.0",
     "points-on-path": "^0.2.1",
-    "roughjs": "^4.4.1"
+    "rimraf": "^5.0.5",
+    "roughjs": "^4.6.6"
   }
 }
